--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,10 @@
 			<artifactId>bootstrap</artifactId>
 			<version>1.0.10</version>
 		</dependency>
+		<dependency>
+			<groupId>br.ufes.inf.nemo</groupId>
+			<artifactId>nemo-utils-java</artifactId>
+			<version>1.1</version>
+		</dependency>
 	</dependencies>
 </project>
