--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -61,4 +61,24 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.faces</url-pattern>
   </servlet-mapping>
+  
+  
+  <login-config>
+  
+    	<auth-method>FORM</auth-method>
+    	
+    	<realm-name>ApplicationRealm</realm-name>
+    	
+    	<form-login-config>
+      		<form-login-page>/login.faces</form-login-page>
+      		<form-error-page>/error-login.faces</form-error-page>
+    	</form-login-config> 
+    	
+  	</login-config>
+  
+  	<security-role>
+    	<role-name>Egresso</role-name>
+ 	</security-role>
+ 	
+ 	
 </web-app>
