Parse missing information (DOI, pages, publisher, etc. -- related to #7)

--- a/src/br/ufes/inf/nemo/marvin/research/application/lattes-parser.properties
+++ b/src/br/ufes/inf/nemo/marvin/research/application/lattes-parser.properties
@@ -51,62 +51,83 @@ jsoupSelectorBibliographicOthersAuthors = AUTORES
 
 ### Publication Element Attributes ###
 
-# Conference publication.
+# Conference publication - General Info:
 bibliographicEventsBaseType = Conferência
 bibliographicEventsType = NATUREZA
 bibliographicEventsYear = ANO-DO-TRABALHO
 bibliographicEventsTitle = TITULO-DO-TRABALHO
+bibliographicEventsDOI = DOI
+# Conference publication - Detail Info:
 bibliographicEventsVenue = NOME-DO-EVENTO | TITULO-DOS-ANAIS-OU-PROCEEDINGS
 bibliographicEventsAuthors = NOME-COMPLETO-DO-AUTOR
+bibliographicEventsPageStart = PAGINA-INICIAL
+bibliographicEventsPageEnd = PAGINA-FINAL
+bibliographicEventsPublisher = NOME-DA-EDITORA
 
-# Journal publication.
+# Journal publication - General Info:
 bibliographicJournalsBaseType = Periódico
 bibliographicJournalsType = NATUREZA
 bibliographicJournalsYear = ANO-DO-ARTIGO
 bibliographicJournalsTitle = TITULO-DO-ARTIGO
+bibliographicJournalsDOI = DOI
+# Journal publication - Detail Info:
 bibliographicJournalsVenue = TITULO-DO-PERIODICO-OU-REVISTA
 bibliographicJournalsAuthors = NOME-COMPLETO-DO-AUTOR
+bibliographicJournalsPageStart = PAGINA-INICIAL
+bibliographicJournalsPageEnd = PAGINA-FINAL
+bibliographicMagazinesExtra01 = ISSN
+bibliographicMagazinesExtra02 = SERIE
+bibliographicMagazinesExtra03 = VOLUME
 
-# Books.
+# Books - General Info:
 bibliographicBooksBaseType = Livro
 bibliographicBooksType = NATUREZA
 bibliographicBooksYear = ANO
 bibliographicBooksTitle = TITULO-DO-LIVRO
+bibliographicBooksDOI = DOI
+# Books - Detail Info:
 bibliographicBooksVenue = NOME-DA-EDITORA
 bibliographicBooksAuthors = NOME-COMPLETO-DO-AUTOR
+bibliographicBooksPublisher = NOME-DA-EDITORA
+bibliographicBooksExtra01 = NUMERO-DA-EDICAO-REVISAO
 
-# Book chapters.
+# Book chapters - General Info:
 bibliographicChaptersBaseType = Capítulo de Livro
 bibliographicChaptersType = TIPO
 bibliographicChaptersYear = ANO
 bibliographicChaptersTitle = TITULO-DO-CAPITULO-DO-LIVRO
+bibliographicChaptersDOI = DOI
+# Book chapters - Detail Info:
 bibliographicChaptersVenue = TITULO-DO-LIVRO
 bibliographicChaptersAuthors = NOME-COMPLETO-DO-AUTOR
+bibliographicChaptersPageStart = PAGINA-INICIAL
+bibliographicChaptersPageEnd = PAGINA-FINAL
+bibliographicChaptersPublisher = NOME-DA-EDITORA
 
-# Magazine publications.
+# Magazine publications - General Info:
 bibliographicMagazinesBaseType = Revista
 bibliographicMagazinesType = NATUREZA
 bibliographicMagazinesYear = ANO-DO-TEXTO
 bibliographicMagazinesTitle = TITULO-DO-TEXTO
+bibliographicMagazinesDOI = DOI
+# Magazine publications - Detail Info:
 bibliographicMagazinesVenue = TITULO-DO-JORNAL-OU-REVISTA
 bibliographicMagazinesAuthors = AUTORES
+bibliographicMagazinesPageStart = PAGINA-INICIAL
+bibliographicMagazinesPageEnd = PAGINA-FINAL
+bibliographicMagazinesExtra01 = ISSN
 
-# Other publications.
+# Other publications - General Info:
 bibliographicOthersBaseType = Outros
 bibliographicOthersType = NATUREZA
 bibliographicOthersYear = ANO
 bibliographicOthersTitle = TITULO
+bibliographicOthersDOI = DOI
+# Other publications - Detail Info:
 bibliographicOthersVenue = EDITORA
 bibliographicOthersAuthors = AUTORES
+bibliographicOthersPublisher = EDITORA
 
-# Common element attributes.
-entryId = SEQUENCIA-PRODUCAO
-entryAttributeYear = ANO
-entryAttributeNature = NATUREZA
-entryAttributeTitle = TITULO
-entryAttributeInstitution = NOME-DA-INSTITUICAO
-entryAttributeSupervised = NOME-DO-ORIENTADO
-entryAttributeSupervisorType = TIPO-DE-ORIENTACAO
 
 
 
