Implement the bibliography generation and download (close #15)

--- a/src/br/ufes/inf/nemo/marvin/research/application/lattes-parser.properties
+++ b/src/br/ufes/inf/nemo/marvin/research/application/lattes-parser.properties
@@ -103,6 +103,7 @@ bibliographicChaptersAuthors = NOME-COMPLETO-DO-AUTOR
 bibliographicChaptersPageStart = PAGINA-INICIAL
 bibliographicChaptersPageEnd = PAGINA-FINAL
 bibliographicChaptersPublisher = NOME-DA-EDITORA
+bibliographicChaptersExtra01 = NUMERO-DA-EDICAO-REVISAO
 
 # Magazine publications - General Info:
 bibliographicMagazinesBaseType = Revista
