Fix bugs in Lattes parsing and BibTeX generation.

--- a/src/br/ufes/inf/nemo/marvin/research/application/lattes-parser.properties
+++ b/src/br/ufes/inf/nemo/marvin/research/application/lattes-parser.properties
@@ -58,7 +58,7 @@ bibliographicEventsYear = ANO-DO-TRABALHO
 bibliographicEventsTitle = TITULO-DO-TRABALHO
 bibliographicEventsDOI = DOI
 # Conference publication - Detail Info:
-bibliographicEventsVenue = NOME-DO-EVENTO | TITULO-DOS-ANAIS-OU-PROCEEDINGS
+bibliographicEventsVenue = TITULO-DOS-ANAIS-OU-PROCEEDINGS | NOME-DO-EVENTO
 bibliographicEventsAuthors = NOME-COMPLETO-DO-AUTOR
 bibliographicEventsPageStart = PAGINA-INICIAL
 bibliographicEventsPageEnd = PAGINA-FINAL
