--- a/src/br/ufes/inf/nemo/marvin/research/application/lattes-parser.properties
+++ b/src/br/ufes/inf/nemo/marvin/research/application/lattes-parser.properties
@@ -58,11 +58,12 @@ bibliographicEventsYear = ANO-DO-TRABALHO
 bibliographicEventsTitle = TITULO-DO-TRABALHO
 bibliographicEventsDOI = DOI
 # Conference publication - Detail Info:
-bibliographicEventsVenue = TITULO-DOS-ANAIS-OU-PROCEEDINGS | NOME-DO-EVENTO
+bibliographicEventsVenue = NOME-DO-EVENTO
 bibliographicEventsAuthors = NOME-COMPLETO-DO-AUTOR
 bibliographicEventsPageStart = PAGINA-INICIAL
 bibliographicEventsPageEnd = PAGINA-FINAL
 bibliographicEventsPublisher = NOME-DA-EDITORA
+bibliographicEventsExtra01 = TITULO-DOS-ANAIS-OU-PROCEEDINGS
 
 # Journal publication - General Info:
 bibliographicJournalsBaseType = Periódico
@@ -75,9 +76,9 @@ bibliographicJournalsVenue = TITULO-DO-PERIODICO-OU-REVISTA
 bibliographicJournalsAuthors = NOME-COMPLETO-DO-AUTOR
 bibliographicJournalsPageStart = PAGINA-INICIAL
 bibliographicJournalsPageEnd = PAGINA-FINAL
-bibliographicMagazinesExtra01 = ISSN
-bibliographicMagazinesExtra02 = SERIE
-bibliographicMagazinesExtra03 = VOLUME
+bibliographicJournalsExtra01 = ISSN
+bibliographicJournalsExtra02 = SERIE
+bibliographicJournalsExtra03 = VOLUME
 
 # Books - General Info:
 bibliographicBooksBaseType = Livro
